--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,200 @@
-asgiref==3.7.2
-beautifulsoup4==4.12.2
-crispy-bootstrap4==2022.1
-Django==4.2.4
-django-crispy-forms==2.0
-greenlet==2.0.2
-lxml==4.9.3
-playwright==1.36.0
-pyee==9.0.4
-python-dotenv==1.0.0
-pytz==2023.3
-soupsieve==2.4.1
-sqlparse==0.4.4
-typing_extensions==4.7.1
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.12
+aiosignal==1.3.2
+aiosqlite==0.21.0
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.9.0
+asgiref==3.8.1
+async-timeout==5.0.1
+asyncio==3.4.3
+attrs==25.3.0
+Automat==25.4.16
+beautifulsoup4==4.13.4
+black==25.1.0
+blinker==1.9.0
+boto3==1.38.34
+botocore==1.38.34
+cachetools==5.5.2
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+chatterbot-corpus==1.2.2
+click==8.1.8
+colorama==0.4.6
+constantly==23.10.4
+crispy-bootstrap4==2025.6
+cryptography==45.0.4
+cssselect==1.3.0
+dataclasses-json==0.6.7
+defusedxml==0.7.1
+Deprecated==1.2.18
+dill==0.4.0
+distro==1.9.0
+Django==5.2.3
+django-crispy-forms==2.4
+dotenv==0.9.9
+duckduckgo_search==8.0.2
+eval_type_backport==0.2.2
+fastapi==0.115.12
+filelock==3.18.0
+Flask==3.1.1
+free_proxy==1.1.3
+frozenlist==1.6.0
+fsspec==2025.5.1
+gitdb==4.0.12
+GitPython==3.1.44
+greenlet==3.2.3
+h11==0.16.0
+hiredis==3.2.1
+html2text==2025.4.15
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.32.4
+hyperlink==21.0.0
+hypothesis==6.131.30
+idna==3.10
+incremental==24.7.2
+iniconfig==2.1.0
+itemadapter==0.11.0
+itemloaders==1.3.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jiter==0.10.0
+jmespath==1.0.1
+joblib==1.5.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+langchain==0.3.25
+langchain-aws==0.2.24
+langchain-community==0.3.24
+langchain-core==0.3.65
+langchain-mistralai==0.2.10
+langchain-ollama==0.3.3
+langchain-openai==0.3.19
+langchain-text-splitters==0.3.8
+langsmith==0.3.45
+limits==5.2.0
+lxml==5.4.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+mdurl==0.1.2
+minify_html==0.16.4
+mpire==2.10.2
+multidict==6.4.4
+multiprocess==0.70.18
+mypy_extensions==1.1.0
+narwhals==1.41.0
+nest-asyncio==1.6.0
+nltk==3.9.1
+numpy==2.2.6
+ollama==0.5.1
+openai==1.84.0
+orjson==3.10.18
+outcome==1.3.0.post0
+packaging==24.2
+pandas==2.2.3
+parsel==1.10.0
+pathspec==0.12.1
+pillow==10.4.0
+platformdirs==4.3.8
+playwright==1.52.0
+pluggy==1.6.0
+primp==0.15.0
+prometheus_client==0.22.1
+propcache==0.3.1
+Protego==0.4.0
+protobuf==5.29.5
+psutil==7.0.0
+pyarrow==20.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+pydantic==2.11.5
+pydantic-settings==2.9.1
+pydantic_core==2.33.2
+pydeck==0.9.1
+PyDispatcher==2.0.7
+pyee==13.0.0
+Pygments==2.19.1
+pyOpenSSL==25.1.0
+PySocks==1.7.1
+pyspellchecker==0.8.3
+pytest==8.4.0
+pytest-asyncio==1.0.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-multipart==0.0.20
+pytz==2025.2
+pywin32==310
+PyYAML==6.0.2
+queuelib==1.8.0
+redis==6.2.0
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+requests-file==2.1.0
+requests-toolbelt==1.0.0
+rich==13.9.4
+rpds-py==0.25.1
+s3transfer==0.13.0
+scikit-learn==1.6.1
+scipy==1.15.3
+scrapegraph_py==1.12.0
+scrapegraphai==1.52.0
+Scrapy==2.13.2
+selenium==4.33.0
+semchunk==3.2.1
+service-identity==24.2.0
+setuptools==80.9.0
+shellingham==1.5.4
+simpleeval==1.0.3
+six==1.17.0
+slowapi==0.1.9
+smmap==5.0.2
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.7
+SQLAlchemy==2.0.41
+sqlmodel==0.0.24
+sqlparse==0.5.3
+starlette==0.46.2
+streamlit==1.39.0
+tabulate==0.9.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tiktoken==0.9.0
+tldextract==5.3.0
+together==1.5.8
+tokenizers==0.21.1
+toml==0.10.2
+tornado==6.5.1
+tqdm==4.67.1
+trio==0.30.0
+trio-websocket==0.12.2
+Twisted==25.5.0
+typer==0.15.4
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+typing_extensions==4.13.2
+tzdata==2025.2
+undetected-playwright==0.3.0
+urllib3==2.4.0
+uvicorn==0.34.3
+w3lib==2.3.1
+watchdog==5.0.3
+watchfiles==1.0.5
+websocket-client==1.8.0
+websockets==15.0.1
+Werkzeug==3.1.3
+wrapt==1.17.2
+wsproto==1.2.0
+yarl==1.20.0
+zope.interface==7.2
+zstandard==0.23.0
